[package]
authors = ["Cypress Frankenfeld <iamcypress@gmail.com>"]
edition = "2018"
name = "climate_risk_map"
version = "0.1.0"

[dependencies]
actix-web = "3"
dotenv = "0.14"
refinery = {version = "0.5", features = ["mysql"]}
serde = "1.0.126"
sqlx = {version = "0.5", features = ["mysql", "runtime-async-std-native-tls"]}
